--- a/template/index.html
+++ b/template/index.html
@@ -18,9 +18,82 @@
                 </div>
             </header>
                 <main class="main">
-                    <ul>
-                        <li>Product 1</li>
-                    </ul>
+                    <div class="content">
+                        <ul class="products">
+                                <li>
+                                    <div class="product">
+                                    <img class="product-image" src="../images/d1.jpeg" alt="product">
+                                    <div class="product-name">
+                                        <a href="product.html">Slim Shirt</a> 
+                                    </div>
+                                    <div class="product-brand">Nike</div>
+                                    <div class="product-price">$60</div>
+                                    <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                                </div>
+                                </li>
+
+                                <li>
+                                    <div class="product">
+                                    <img class="product-image" src="../images/d1.jpeg" alt="product">
+                                    <div class="product-name">
+                                        <a href="product.html">Slim Shirt</a> 
+                                    </div>
+                                    <div class="product-brand">Nike</div>
+                                    <div class="product-price">$60</div>
+                                    <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                                </div>
+                                </li>
+
+                                <li>
+                                    <div class="product">
+                                    <img class="product-image" src="../images/d1.jpeg" alt="product">
+                                    <div class="product-name">
+                                        <a href="product.html">Slim Shirt</a> 
+                                    </div>
+                                    <div class="product-brand">Nike</div>
+                                    <div class="product-price">$60</div>
+                                    <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                                </div>
+                                </li>
+
+                                <li>
+                                    <div class="product">
+                                    <img class="product-image" src="../images/d1.jpeg" alt="product">
+                                    <div class="product-name">
+                                        <a href="product.html">Slim Shirt</a> 
+                                    </div>
+                                    <div class="product-brand">Nike</div>
+                                    <div class="product-price">$60</div>
+                                    <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                                </div>
+                                </li>
+
+                                <li>
+                                    <div class="product">
+                                    <img class="product-image" src="../images/d1.jpeg" alt="product">
+                                    <div class="product-name">
+                                        <a href="product.html">Slim Shirt</a> 
+                                    </div>
+                                    <div class="product-brand">Nike</div>
+                                    <div class="product-price">$60</div>
+                                    <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                                </div>
+                                </li>
+
+                                <li>
+                                    <div class="product">
+                                    <img class="product-image" src="../images/d1.jpeg" alt="product">
+                                    <div class="product-name">
+                                        <a href="product.html">Slim Shirt</a> 
+                                    </div>
+                                    <div class="product-brand">Nike</div>
+                                    <div class="product-price">$60</div>
+                                    <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                                </div>
+                                </li>
+                        </ul>
+                    </div>
+                    
                 </main>
                 <footer class="footer">
                     All rights reserved.
