--- a/template/index.html
+++ b/template/index.html
@@ -3,20 +3,34 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Amazona</title>
-
     </head>
     <body>
         <div class="grid-container">
             <header class="header">
-                <div class="brand">
+                <div class="brand"> 
+                        <button onclick="openMenu()">
+                        &#9776;
+                    </button>
                     <a href="index.html">amazona</a>
                 </div>
                 <div class="header-links">
                     <a href="cart.html">Cart</a>
                     <a href="signin.html">Sign In</a>
-
                 </div>
             </header>
+            <aside class="sidebar">
+                <h3>Shopping Categories</h3>
+                <button class="sidebar-close-button" onclick="closeMenu()">X</button>
+                <ul>
+                    <li>
+                        <a href="index.html">Pants</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Shirts</a>
+                    </li>
+                </ul>
+
+            </aside>
                 <main class="main">
                     <div class="content">
                         <ul class="products">
@@ -99,6 +113,13 @@
                     All rights reserved.
                 </footer>
         </div>
-        
+        <script>
+            function openMenu(){
+                document.querySelector(".sidebar").classList.add("open")
+            }
+            function closeMenu(){
+                document.querySelector(".sidebar").classList.remove("open")
+            }
+        </script>
     </body>
-</html>
+</html> 
